--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22242,8 +22242,20 @@ i.fa-star.rating{color: rgb(232, 217, 31);}
 .content span:nth-child(3) {
     color: #fff;
     cursor: pointer;
-    width: 60%;
+    width: 20%;
     transition: all 0.5s
+}
+.content span:nth-child(4) {
+  color: #fff;
+  cursor: pointer;
+  width: 20%;
+  transition: all 0.5s
+}
+.content span:nth-child(5) {
+  color: #fff;
+  cursor: pointer;
+  width: 10%;
+  transition: all 0.5s
 }
 
 .content span:nth-child(3) .check_active {
